tests/machine/x/go/save_jsonl_stdout.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/save_jsonl_stdout.go:29:31: cannot use _ as value or type

1: //go:build ignore
